dev-eks-k8s/auth/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: auth
  namespace: demo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: auth
        istio: monitor
    spec:
      containers:
      - name: auth
        image: devopsflow999/auth:main-v0.1.4
        ports:
        - name: http
          containerPort: 3002
          protocol: TCP
        - name: metrics ## added for metrics svc 
          containerPort: 9465
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
  strategy:
    canary:
      canaryService: auth-canary
      stableService: auth-stable
      trafficRouting:
        istio:
          virtualService:
            name: auth-vsvc
            routes:
            - auth-route
      steps:
      - setWeight: 10
      - pause: {}
      - setWeight: 20
      - pause: {duration: 20s}
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
