dev-eks-k8s/auth/2.1metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-metrics
  namespace: demo
  labels:
    app: auth
    metrics: "true"
spec:
  selector:
    app: auth
  ports:
    - name: metrics
      port: 9465
      targetPort: 9465
      protocol: TCP
